--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        jcenter()
+
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -20,12 +20,15 @@ group 'com.kim.board'
 
 repositories {
     mavenCentral()
-    jcenter()
+
 }
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
-
+    implementation('org.projectlombok:lombok') //자바 개발할때 자주 사용하는 어노테이션 생성
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') //JPA 라이브러리
+    implementation("com.h2database:h2") //테스트용 데이터베이스
+    implementation('org.springframework.boot:spring-boot-starter-mustache') //템플릿 엔진
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
 
