--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa') //JPA 라이브러리
     implementation("com.h2database:h2") //테스트용 데이터베이스
     implementation('org.springframework.boot:spring-boot-starter-mustache') //템플릿 엔진
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜 로그인 같은 클라이언트 입장에서 필요
+    implementation('org.springframework.session:spring-session-jdbc')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
 
