--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client') // 소셜 로그인 같은 클라이언트 입장에서 필요
     implementation('org.springframework.session:spring-session-jdbc')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.security:spring-security-test')
 
 
 }
